@@ -3,29 +3,24 @@ package subway.domain;
 import java.util.*;
 
 public class LineRepository {
-    private static final List<Line> lines;
+    private static final List<Line> lines = new ArrayList<>();
 
     static {
-        List<Line> defaultLine = List.of(
-                new Line("2호선", Arrays.asList(
+        List<Line> defaultLine = new ArrayList<>(Arrays.asList(
+                new Line("2호선", new ArrayList<>(Arrays.asList(
                         new Station("교대역"),
                         new Station("강남역"),
-                        new Station("역삼역"))),
-                new Line("3호선", Arrays.asList(
+                        new Station("역삼역")))),
+                new Line("3호선", new ArrayList<>(Arrays.asList(
                         new Station("교대역"),
                         new Station("남부터미널역"),
                         new Station("양재역"),
-                        new Station("매봉역"))),
-                new Line("신분당선",Arrays.asList(
+                        new Station("매봉역")))),
+                new Line("신분당선", new ArrayList<>(Arrays.asList(
                         new Station("강남역"),
                         new Station("양재역"),
-                        new Station("양재시민의숲역")))
-        );
-        lines = new ArrayList<>(defaultLine);
-    }
-
-    public static List<Line> lines() {
-        return Collections.unmodifiableList(lines);
+                        new Station("양재시민의숲역"))))));
+        lines.addAll(defaultLine);
     }
 
     public static void addLine(Line line) {
@@ -39,4 +34,6 @@ public class LineRepository {
     public static List<Line> getLines() {
         return lines;
     }
+
+//    public static void setLine(String lineName, )
 }
